--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: node_js
 node_js:
   - "0.10"
 
-before_install:
+before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g karma bower grunt-cli
+  - npm install grunt-cli
   - bower install
-  - npm install
 
-script: "grunt"
+script: "gulp test"
