--- a/package.json
+++ b/package.json
@@ -9,29 +9,31 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "karma": "~0.12",
-    "protractor": "^1.1.1",
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
+    "bower": "~1.3.12",
+    "del": "~0.1.3",
+    "event-stream": "~3.1.7",
+    "gulp": "~3.8.8",
+    "gulp-angular-templatecache": "~1.4.2",
+    "gulp-concat": "~2.4.1",
+    "gulp-header": "~1.1.1",
+    "gulp-jshint": "~1.8.5",
+    "gulp-minify-css": "~0.3.10",
+    "gulp-minify-html": "~0.1.6",
+    "gulp-plumber": "~0.6.6",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~1.0.1",
+    "gulp-util": "~3.0.1",
+    "jshint-stylish": "~1.0.0",
+    "karma": "~0.12.24",
+    "karma-chrome-launcher": "~0.1.5",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-jasmine": "~0.1.5",
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-coverage": "~0.2.6"
   },
   "scripts": {
     "postinstall": "bower install",
-
-    "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1",
-
-    "pretest": "npm install",
-    "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js  --single-run",
-
-    "preupdate-webdriver": "npm install",
-    "update-webdriver": "webdriver-manager update",
-
-    "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js",
-
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+    "test": "gulp test"
   }
 }
