--- a/package.json
+++ b/package.json
@@ -10,30 +10,28 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "~1.3.12",
-    "del": "~0.1.3",
-    "event-stream": "~3.1.7",
-    "gulp": "~3.8.8",
-    "gulp-angular-templatecache": "~1.4.2",
-    "gulp-concat": "~2.4.1",
-    "gulp-header": "~1.1.1",
-    "gulp-jshint": "~1.8.5",
-    "gulp-minify-css": "~0.3.10",
-    "gulp-minify-html": "~0.1.6",
-    "gulp-plumber": "~0.6.6",
-    "gulp-rename": "~1.2.0",
-    "gulp-uglify": "~1.0.1",
-    "gulp-util": "~3.0.1",
-    "jshint-stylish": "~1.0.0",
+    "coveralls": "~2.11.2",
+    "grunt": "~0.4.5",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-karma": "~0.9.0",
     "karma": "~0.12.24",
     "karma-chrome-launcher": "~0.1.5",
-    "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma-coverage": "~0.2.6"
+    "karma-script-launcher": "~0.1.0",
+    "load-grunt-tasks": "~0.6.0"
+  },
+  "engines": {
+    "node": ">=0.10.0"
   },
   "scripts": {
     "postinstall": "bower install",
-    "test": "gulp test"
+    "test": "grunt test"
   }
 }
