--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-ui-router-menus",
   "version": "0.1.0",
-  "description": "angular-ui-router state for menu, nav, navbar, tab and other navigation tools",
+  "description": "angular-ui-router state derived menu, nav, navbar, tab and other navigation tools",
   "license": "MIT",
   "homepage": "https://github.com/nitintutlani/angular-ui-router-menus",
   "ignore": [
