- Service `menus` now support named menu items - Add tests for named menus

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "node_modules",
     "bower_components",
     "src",
+    "build",
+    "examples",
     "config",
     "files.js",
     "test",
