--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-copy": "~0.6.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.6.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-karma": "~0.9.0",
+    "grunt-karma-coveralls": "~2.5.2",
     "karma": "~0.12.24",
     "karma-chrome-launcher": "~0.1.5",
+    "karma-coverage": "~0.2.6",
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-script-launcher": "~0.1.0",
