--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-karma": "~0.9.0",
     "grunt-karma-coveralls": "~2.5.2",
+    "istanbul": "~0.3.2",
     "karma": "~0.12.24",
     "karma-chrome-launcher": "~0.1.5",
     "karma-coverage": "~0.2.6",
