--- a/package.json
+++ b/package.json
@@ -1,40 +1,49 @@
 {
   "name": "angular-ui-router-menus",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "homepage": "https://github.com/nitintutlani/angular-ui-router-menus",
   "description": "angular-ui-router state derived menu, nav, navbar, tab and other navigation tools",
   "repository": {
     "type": "git",
     "url": "https://github.com/nitintutlani/angular-ui-router-menus.git"
   },
+  "bugs": {
+    "url": "https://github.com/nitintutlani/angular-ui-router-menus/issues"
+  },
   "license": "MIT",
   "devDependencies": {
-    "bower": "~1.3.12",
+    "bower": "~1.7.2",
     "coveralls": "~2.11.2",
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
-    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-clean": "~0.7.0",
     "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.6.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-karma": "~0.9.0",
+    "grunt-karma": "~0.12.1",
     "grunt-karma-coveralls": "~2.5.2",
-    "istanbul": "~0.3.2",
-    "karma": "~0.12.24",
-    "karma-chrome-launcher": "~0.1.5",
-    "karma-coverage": "~0.2.6",
-    "karma-jasmine": "~0.1.5",
-    "karma-phantomjs-launcher": "~0.1.4",
+    "istanbul": "~0.4.2",
+    "jasmine-core": "^2.4.1",
+    "karma": "~0.13.19",
+    "karma-chrome-launcher": "~0.2.2",
+    "karma-coverage": "~0.5.3",
+    "karma-jasmine": "~0.3.6",
+    "karma-phantomjs-launcher": "~0.2.3",
     "karma-script-launcher": "~0.1.0",
-    "load-grunt-tasks": "~0.6.0"
+    "load-grunt-tasks": "~3.4.0"
   },
+  "dependencies": {},
+  "main": "dist/angular-ui-router-menus.js",
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "postinstall": "bower install",
     "test": "grunt test"
+  },
+  "author": {
+    "name": "Nitin Tutlani",
+    "email": "nitintutlani@yahoo.com"
   }
 }
